# limited-sniper-cpp

./: CMakeLists.txt  README.md  config.json
src/: HttpClient.hpp  Sniper.hpp  main.cpp
